web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"1"},"creationTimestamp":"2025-03-15T19:52:22Z","generation":7,"labels":{"app":"synergychat-web"},"name":"synergychat-web","namespace":"default","resourceVersion":"415051","uid":"04eae619-58dd-47cf-baf9-3417ced19561"},"spec":{"progressDeadlineSeconds":600,"replicas":3,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"synergychat-web"}},"strategy":{"rollingUpdate":{"maxSurge" [...]
  creationTimestamp: "2025-03-15T19:52:22Z"
  generation: 8
  labels:
    app: synergychat-web
  name: synergychat-web
  namespace: default
  resourceVersion: "415189"
  uid: 04eae619-58dd-47cf-baf9-3417ced19561
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: synergychat-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: synergychat-web
    spec:
      containers:
      - image: docker.io/bootdotdev/synergychat-web:latest
        imagePullPolicy: Always
        name: synergychat-web
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2025-03-15T19:52:22Z"
    lastUpdateTime: "2025-03-15T19:52:28Z"
    message: ReplicaSet "synergychat-web-f765d99db" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-03-22T17:13:35Z"
    lastUpdateTime: "2025-03-22T17:13:35Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 8
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
